# reference-cpp-project

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: analysis.yml  analyze.yml  cicd.yml  package.yml  sanitize.yml  sanitizers.yml  test.yml
apps/calculator/: CMakeLists.txt  main.cpp
cmake/: flags.cmake  utilities.cmake
cmake/modules/: flags.cmake
cmake/presets/: base-preset.json  platform-presets.json  presets-base.json
cmake/toolchains/: arm64-linux-clang.cmake  arm64-linux-gnu.cmake  arm64-macos-clang.cmake  arm64-windows-clang.cmake  arm64-windows-msvc.cmake  x64-linux-clang.cmake  x64-linux-gnu.cmake  x64-macos-clang.cmake  x64-windows-clang.cmake  x64-windows-msvc.cmake
libs/arithmetic/: CMakeLists.txt  arithmetic.cpp  arithmetic.hpp  test_arithmetic.cpp
